--- a/Platform/Platform.fsproj
+++ b/Platform/Platform.fsproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.ServiceProcess.ServiceController" Version="7.0.0-rc.1.22426.10" />
-    <PackageReference Update="FSharp.Core" Version="7.0.0-beta.22427.1" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="7.0.0" />
+    <PackageReference Update="FSharp.Core" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
