--- a/Samples/Msg/MsgWorker/MsgWorker.fsproj
+++ b/Samples/Msg/MsgWorker/MsgWorker.fsproj
@@ -27,9 +27,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0-rc.1.22426.10" />
-      <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.0-rc.1.22426.10" />
-      <PackageReference Update="FSharp.Core" Version="7.0.0-beta.22427.1" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.0" />
+      <PackageReference Update="FSharp.Core" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
