--- a/Wcf/Wcf.fsproj
+++ b/Wcf/Wcf.fsproj
@@ -8,8 +8,8 @@
     <Authors>Konstantin Konstantinov</Authors>
     <Company>Softellect Systems, Inc.</Company>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>7.0.0-preview-0001</Version>
-    <PackageVersion>7.0.0-preview-0001</PackageVersion>
+    <Version>7.0.0.1</Version>
+    <PackageVersion>7.0.0.1</PackageVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -38,7 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="7.0.0-beta.22427.1" />
+    <PackageReference Update="FSharp.Core" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
