--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -8,8 +8,8 @@
     <Authors>Konstantin Konstantinov</Authors>
     <Company>Softellect Systems, Inc.</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>8.0.200.1</Version>
-    <PackageVersion>8.0.200.1</PackageVersion>
+    <Version>8.0.300.1</Version>
+    <PackageVersion>8.0.300.1</PackageVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -27,6 +27,7 @@
     <Compile Include="NamingConventions.fs" />
     <Compile Include="Primitives.fs" />
     <Compile Include="MessagingPrimitives.fs" />
+    <Compile Include="VersionInfo.fs" />
     <Compile Include="GeneralErrors.fs" />
     <Compile Include="TimerErrors.fs" />
     <Compile Include="WcfErrors.fs" />
@@ -38,24 +39,24 @@
     <Compile Include="TimerEvents.fs" />
     <Compile Include="ServiceInstaller.fs" />
     <Compile Include="AppSettings.fs" />
+    <Compile Include="Worker.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Argu" Version="6.2.3" />
+    <PackageReference Include="Argu" Version="6.2.4" />
     <PackageReference Include="Core.System.Configuration.Install" Version="1.1.0" />
     <PackageReference Include="CoreWCF.Http" Version="1.5.2" />
     <PackageReference Include="CoreWCF.NetTcp" Version="1.5.2" />
     <PackageReference Include="CoreWCF.Primitives" Version="1.5.2" />
     <PackageReference Include="FSharp.Interop.Dynamic" Version="5.0.1.268" />
     <PackageReference Include="FsPickler" Version="5.3.2" />
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
     <PackageReference Include="System.ServiceModel.Http" Version="8.0.0" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="8.0.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="8.0.0" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
-    <PackageReference Update="FSharp.Core" Version="8.0.200" />
+    <PackageReference Update="FSharp.Core" Version="8.0.300" />
   </ItemGroup>
 
 </Project>
