--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -31,7 +31,9 @@
     <Compile Include="GeneralErrors.fs" />
     <Compile Include="TimerErrors.fs" />
     <Compile Include="WcfErrors.fs" />
+    <Compile Include="DataAccessErrors.fs" />
     <Compile Include="MessagingErrors.fs" />
+    <Compile Include="Errors.fs" />
     <Compile Include="Logging.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Rop.fs" />
@@ -39,6 +41,7 @@
     <Compile Include="TimerEvents.fs" />
     <Compile Include="ServiceInstaller.fs" />
     <Compile Include="AppSettings.fs" />
+    <Compile Include="DataAccess.fs" />
     <Compile Include="Worker.fs" />
   </ItemGroup>
 
@@ -56,7 +59,13 @@
     <PackageReference Include="System.ServiceModel.NetTcp" Version="8.0.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="8.0.0" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
-    <PackageReference Update="FSharp.Core" Version="8.0.300" />
+    <PackageReference Include="FSharp.Core" Version="8.0.301" />
+    <PackageReference Include="SQLProvider" Version="1.3.43" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="SQLite.Interop.dll" Version="1.0.103" />
+    <PackageReference Include="System.Data.Common" Version="4.3.0" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
+    <PackageReference Include="FSharp.Data" Version="6.4.0" />
   </ItemGroup>
 
 </Project>
