--- a/Data/Data.fsproj
+++ b/Data/Data.fsproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
     <PackageReference Update="FSharp.Core" Version="8.0.301" />
   </ItemGroup>
 
