--- a/Messaging/Messaging.fsproj
+++ b/Messaging/Messaging.fsproj
@@ -43,7 +43,7 @@
 
   <ItemGroup>
     <PackageReference Include="SQLProvider" Version="1.3.43" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
     <PackageReference Include="SQLite.Interop.dll" Version="1.0.103" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
