--- a/MessagingService/appsettings.json
+++ b/MessagingService/appsettings.json
@@ -10,6 +10,6 @@
     "MessagingServiceCommunicationType": "NetTcpCommunication"
   },
   "connectionStrings": {
-    "MessagingService": "Data Source=localhost;Initial Catalog=msg803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;"
+    "MessagingService": "Data Source=localhost;Initial Catalog=msg803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;"
   }
 }
