--- a/Samples/Msg/MsgServiceInfo/MsgServiceInfo.fsproj
+++ b/Samples/Msg/MsgServiceInfo/MsgServiceInfo.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Primitives.fs" />
     <Compile Include="EchoMsgServiceInfo.fs" />
   </ItemGroup>
 
