--- a/Samples/Msg/MsgWorker/MsgWorker.fsproj
+++ b/Samples/Msg/MsgWorker/MsgWorker.fsproj
@@ -26,6 +26,10 @@
         <Compile Include="Program.fs" />
     </ItemGroup>
 
+  <ItemGroup>
+    <None Include="MessagingServiceName.PS1" CopyToOutputDirectory="PreserveNewest" Condition="Exists('MessagingServiceName.PS1')" />
+  </ItemGroup>
+
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
@@ -33,6 +37,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\MessagingService\MessagingService.fsproj" />
       <ProjectReference Include="..\MsgServiceInfo\MsgServiceInfo.fsproj" />
     </ItemGroup>
 
