--- a/Messaging/Messaging.fsproj
+++ b/Messaging/Messaging.fsproj
@@ -29,7 +29,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="README.md" />
+    <None Include="..\README.md" Link="README.md" Pack="true" PackagePath="\">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Compile Include="Primitives.fs" />
     <Compile Include="VersionInfo.fs" />
     <Compile Include="Errors.fs" />
