--- a/MessagingService/MessagingService.fsproj
+++ b/MessagingService/MessagingService.fsproj
@@ -27,7 +27,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="README.md" />
+    <None Include="..\README.md" Link="README.md" Pack="true" PackagePath="\">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="..\MessagingVersionInfo.ps1" Link="MessagingVersionInfo.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
