--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -29,7 +29,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="README.md" />
+    <None Include="..\README.md" Link="README.md" Pack="true" PackagePath="\">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="..\VersionInfo.ps1" Link="VersionInfo.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
