--- a/Wcf/Wcf.fsproj
+++ b/Wcf/Wcf.fsproj
@@ -29,7 +29,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="README.md" />
+    <None Include="..\README.md" Link="README.md" Pack="true" PackagePath="\">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Compile Include="Errors.fs" />
     <Compile Include="Common.fs" />
     <Compile Include="AppSettings.fs" />
