--- a/Samples/Msg/MsgWorker/appsettings.json
+++ b/Samples/Msg/MsgWorker/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "appSettings": {
+    "MessagingServiceAddress": "127.0.0.1",
+    "MessagingHttpServicePort": "45003",
+    "MessagingNetTcpServicePort": "45002",
+    "MessagingServiceCommunicationType": "NetTcpCommunication",
+    "ExpirationTimeInMinutes": "5"
+  }
+  "connectionStrings": {
+    "MessagingService": "Data Source=localhost;Initial Catalog=msg803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;"
   }
 }
