--- a/DistributedProcessing/PartitionerService/appsettings.json
+++ b/DistributedProcessing/PartitionerService/appsettings.json
@@ -2,7 +2,8 @@
   "appSettings": {
     "MessagingServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45003;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity",
     "PartitionerId": "{F941F87C-BEBC-43E7-ABD3-967E377CBD57}",
-    "PartitionerServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45023;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity"
+    "PartitionerServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45023;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity",
+    "ResultLocation": "C:\\Results"
   },
   "connectionStrings": {
     "PartitionerService": "Data Source=localhost;Initial Catalog=prt803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;",
