--- a/SysTests/SysTests.fsproj
+++ b/SysTests/SysTests.fsproj
@@ -37,6 +37,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <ProjectReference Include="..\Sys\Sys.fsproj" />
     <PackageReference Update="FSharp.Core" Version="8.0.401" />
   </ItemGroup>
 
