--- a/DistributedProcessing/WorkerNodeService/appsettings.json
+++ b/DistributedProcessing/WorkerNodeService/appsettings.json
@@ -21,7 +21,11 @@
     "ResultLocation": "C:\\WorkerNode\\Results",
     "SolverLocation": "C:\\WorkerNode\\Solvers",
     "SolverOutputLocation": "C:\\WorkerNode\\Temp",
-    "FileStorageLocation": "C:\\WorkerNode\\FileStorage"
+    "FileStorageLocation": "C:\\WorkerNode\\FileStorage",
+    "MathKernelFileName": "C:\\Program Files\\Wolfram Research\\Wolfram\\14.1\\math.exe",
+    "UseMathLink": "False",
+    "WolframInput": "C:\\WorkerNode\\Wolfram\\Input\\",
+    "WolframOutput": "C:\\WorkerNode\\Wolfram\\Output\\"
   },
   "connectionStrings": {
     "WorkerNodeService": "Data Source=localhost;Initial Catalog=wns901_04;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=360;TrustServerCertificate=yes;",
