--- a/DistributedProcessing/SolverRunner/SolverRunner.fsproj
+++ b/DistributedProcessing/SolverRunner/SolverRunner.fsproj
@@ -49,6 +49,7 @@
     <ItemGroup />
 
     <ItemGroup>
+        <ProjectReference Include="..\..\Analytics\Analytics.fsproj" />
         <ProjectReference Include="..\..\Messaging\Messaging.fsproj" />
         <ProjectReference Include="..\Core\Core.fsproj" />
         <ProjectReference Include="..\..\Sys\Sys.fsproj" />
