--- a/MathTests/MathTests.fsproj
+++ b/MathTests/MathTests.fsproj
@@ -26,6 +26,8 @@
     <ItemGroup>
         <Compile Include="SparseArray2DTests.fs" />
         <Compile Include="SparseTests.fs" />
+        <Compile Include="MultidimensionalTests.fs" />
+        <Compile Include="MultidimensionalTests4D.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
