--- a/MathTests/MathTests.fsproj
+++ b/MathTests/MathTests.fsproj
@@ -33,7 +33,9 @@
         <Compile Include="PoissonEvolutionTests.fs" />
         <Compile Include="CoordTests.fs" />
         <Compile Include="MomentTests.fs" />
+        <Compile Include="MeanStdDevTests.fs" />
         <Compile Include="Program.fs" />
+        <Compile Include="TypeTests.fs" />
     </ItemGroup>
 
     <ItemGroup>
