--- a/MathTests/MathTests.fsproj
+++ b/MathTests/MathTests.fsproj
@@ -36,6 +36,7 @@
         <Compile Include="MeanStdDevTests.fs" />
         <Compile Include="MultiplierTests.fs" />
         <Compile Include="TypeTests.fs" />
+        <Compile Include="ModelPerformanceTests.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
