--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -32,6 +32,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <None Include="IncrementBuildNumber.fsx" />
         <None Include="..\README.md" Link="README.md" Pack="true" PackagePath="\">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
@@ -42,6 +43,7 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
         <Compile Include="NamingConventions.fs" />
+        <Compile Include="BuildInfo.fs" />
         <Compile Include="VersionInfo.fs" />
         <Compile Include="ExitErrorCodes.fs" />
         <Compile Include="Logging.fs" />
@@ -86,5 +88,9 @@
         <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
         <PackageReference Include="FSharp.Data" Version="6.6.0" />
     </ItemGroup>
+
+    <Target Name="IncrementBuildNumber" BeforeTargets="CoreCompile">
+        <Exec Command="dotnet fsi $(ProjectDir)IncrementBuildNumber.fsx" />
+    </Target>    
 
 </Project>
